Fix response parsing - Update projects schema - Update setup.py url

--- a/tap_harvest_forecast/schemas/projects.json
+++ b/tap_harvest_forecast/schemas/projects.json
@@ -13,6 +13,12 @@
         "string"
       ]
     },
+    "color": {
+      "type": [
+        "null",
+        "string"
+      ]
+    },
     "code": {
       "type": [
         "null",
